src/objects/sked_Support_Plan_Comment__c.object
<CustomObject>
    <fields>
        <fullName>sked_Case_Comment__c</fullName>
        <label>Case Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Edited_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Edited By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sked_Support_Plan_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Public__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Support_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Plan</label>
        <referenceTo>sked_Support_Plan__c</referenceTo>
        <relationshipName>sked_Support_Plan_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Updated_Date__c</fullName>
        <label>Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>Support Plan Comment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPC-{000000}</displayFormat>
        <label>Support Plan Comment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Plan Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>